--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "capacitorjs-mqtt-bridge",
-  "version": "0.0.1",
-  "description": "this is a capacitorjs mqtt bridge plugin",
+  "name": "@yekaa/capacitorjs-mqtt-native-plugin",
+  "version": "1.0.0",
+  "description": "⚡️This is an easy-to-use CapacitorJS plugin library that enables your CapacitorJS-powered Android mobile app to connect to an MQTT broker and send/receive messages. With this plugin, you can easily implement MQTT-based communication in your Android CapacitorJS app natively. Support for iOS is currently in development and will be added soon.",
   "main": "dist/plugin.cjs.js",
   "module": "dist/esm/index.js",
   "types": "dist/esm/index.d.ts",
@@ -17,10 +17,10 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/yekaa1818/capacitorjs-mqtt.git"
+    "url": "git+https://github.com/yekaa1818/capacitorjs-mqtt-native-plugin.git"
   },
   "bugs": {
-    "url": "https://github.com/yekaa1818/capacitorjs-mqtt/issues"
+    "url": "https://github.com/yekaa1818/capacitorjs-mqtt-native-plugin"
   },
   "keywords": [
     "capacitor",
