--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "capacitorjs-mqtt-native-plugin",
-  "version": "1.0.1",
-  "description": "⚡️This is an easy-to-use CapacitorJS plugin library that enables your CapacitorJS-powered Android mobile app to connect to an MQTT broker and send/receive messages. With this plugin, you can easily implement MQTT-based communication in your Android CapacitorJS app natively. Support for iOS is currently in development and will be added soon.",
+  "name": "capacitor-mqtt-native-plugin",
+  "version": "1.0.0",
+  "description": "⚡️This is an easy-to-use CapacitorJS plugin library that enables your CapacitorJS-powered Android mobile app to connect to an MQTT broker and send/receive messages. With this plugin, you can easily implement MQTT-based communication in your Android CapacitorJS app natively.",
   "main": "dist/plugin.cjs.js",
   "module": "dist/esm/index.js",
   "types": "dist/esm/index.d.ts",
