--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "capacitor-mqtt-native-plugin",
   "version": "1.0.4",
-  "description": "⚡️This is an easy-to-use CapacitorJS plugin library that enables your CapacitorJS-powered Android mobile app to connect to an MQTT broker and send/receive messages. With this plugin, you can easily implement MQTT-based communication in your Android CapacitorJS app natively.",
+  "description": "⚡️This is an easy-to-use CapacitorJS plugin library that enables your CapacitorJS-powered Android mobile app to connect to an MQTT broker and send/receive messages. With this plugin, you can easily implement MQTT-based communication in your Android CapacitorJS app natively using TCP protocol.",
   "main": "dist/plugin.cjs.js",
   "module": "dist/esm/index.js",
   "types": "dist/esm/index.d.ts",
@@ -17,10 +17,10 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/yekaa1818/capacitorjs-mqtt-native-plugin.git"
+    "url": "git+https://github.com/kufayeka/capacitorjs-mqtt-native-plugin.git"
   },
   "bugs": {
-    "url": "https://github.com/yekaa1818/capacitorjs-mqtt-native-plugin"
+    "url": "https://github.com/kufayeka/capacitorjs-mqtt-native-plugin/issues"
   },
   "keywords": [
     "capacitor",
